tests/single_instruction_translation_validation/mcsema/register-variants/vcvtps2dq_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:185:26: error: use of undefined value '@my.fabs.v4f32'
  %19 = call <4 x float> @my.fabs.v4f32(<4 x float> %18)
                         ^
0.01user 0.01system 0:00.02elapsed 107%CPU (0avgtext+0avgdata 27744maxresident)k
0inputs+16outputs (0major+3281minor)pagefaults 0swaps
